End of Section 4

--- a/client/angular.json
+++ b/client/angular.json
@@ -61,7 +61,7 @@
         },
         "serve": {
           "options": {
-            "ssl":true,
+            "ssl":false,
             "sslCert": "",
             "sslKey": ""
           },
